# bech32

./: .ghci  .gitignore  CHANGELOG  README.md  flake.nix  ppad-bech32.cabal
bench/: Main.hs
bench/Reference/: Bech32.hs
lib/Codec/Binary/: Bech32.hs
lib/Data/ByteString/: Base32.hs  Bech32.hs  Bech32m.hs
lib/Data/ByteString/Bech32/: Internal.hs
test/: Main.hs
test/Reference/: Bech32.hs
