cabal-version:      3.0
name:               ppad-bech32
version:            0.1.2
synopsis:           The bech32 and bech32m encodings, per BIPs 173 & 350.
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == 9.8.1
extra-doc-files:    CHANGELOG
description:
  The bech32 and bech32m encodings on strict bytestrings, per BIPs 173 &
  350.

source-repository head
  type:     git
  location: git.ppad.tech/bech32.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Data.ByteString.Base32
    , Data.ByteString.Bech32.Internal
    , Data.ByteString.Bech32
    , Data.ByteString.Bech32m
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13
    , primitive >= 0.8 && < 0.10

test-suite bech32-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:
      Reference.Bech32

  ghc-options:
    -rtsopts -Wall -O2

  build-depends:
      base
    , array
    , bytestring
    , ppad-bech32
    , tasty
    , tasty-quickcheck

benchmark bech32-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs
  other-modules:
      Reference.Bech32

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , array
    , bytestring
    , criterion
    , deepseq
    , ppad-bech32

