cabal-version:      3.0
name:               ppad-bech32
version:            0.2.3
synopsis:           bech32 and bech32m encoding/decoding, per BIPs 173 & 350.
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == 9.8.1
extra-doc-files:    CHANGELOG
description:
  bech32 and bech32m encoding/decoding on strict bytestrings, per BIPs
  173 & 350.

flag llvm
  description: Use GHC's LLVM backend.
  default:     False
  manual:      True

source-repository head
  type:     git
  location: git.ppad.tech/bech32.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  if flag(llvm)
    ghc-options: -fllvm -O2
  exposed-modules:
      Data.ByteString.Base32
    , Data.ByteString.Bech32.Internal
    , Data.ByteString.Bech32
    , Data.ByteString.Bech32m
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13

test-suite bech32-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:
      Reference.Bech32

  ghc-options:
    -rtsopts -Wall -O2

  build-depends:
      base
    , array
    , bytestring
    , ppad-bech32
    , tasty
    , tasty-quickcheck

benchmark bech32-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs
  other-modules:
      Reference.Bech32

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , array
    , bytestring
    , criterion
    , deepseq
    , ppad-bech32

